# shine-pong

./: .gitignore  CMakeLists.txt  pong.project  test.project
CMake/: Shine.cmake  TargetAutoBuild.cmake
CMake/Modules/: FindShSDK.cmake
Generic/GUI/: gui_menu.xml
Generic/Levels/bug/: bug.level
Generic/Levels/pong_mur/: pong_mur.level
Generic/Levels/pong_mur_obstacles/: pong_mur_obstacles.level
Generic/Levels/pong_simple/: pong_simple.level
Generic/Levels/pong_simple_obstacles/: pong_simple_obstacles.level
Generic/Resources/DataSets/: pong_balle.dataset  pong_gagneDroit.dataset  pong_level.dataset  pong_murH.dataset  pong_raquetteGauche.dataset
Generic/Resources/Fonts/: arial_110.abc  manga_temple_90.abc  sst_medium_22.abc  sst_medium_22.tga  sst_medium_55.abc  sst_medium_55.tga
Generic/Resources/Prefab/: background.prefab  bug.prefab  collision_gagne_droit.prefab  collision_gagne_gauche.prefab  collision_segment.prefab  fond.prefab  murbas.prefab  murhaut.prefab  obstacle.prefab  raquettedroit.prefab  raquettegauche.prefab
Generic/Resources/Sprites/: editor_ui.add.tga  game.background.tga  game.circle.tga  menu.commandes.tga  menu.jouer.tga  menu.niveau.tga  menu.options.tga  menu.quitter.tga  pong.background.tga  pong.balle.tga  pong.barre2.tga  pong.bord.tga  pong.bordV.tga  pong.bouton.tga  pong.droite.tga  pong.fleched.tga  pong.flecheg.tga  pong.fond.tga  pong.fondbord.tga  pong.fondcoin.tga  pong.gauche.tga  pong.invalider.tga  pong.mur.tga  pong.obstacle.tga  pong.simple_obstacles.tga  pong.titre.tga  pong.valider.tga
Generic/Settings/InputActions/: configuration.xml
src/: CMakeLists.txt
src/Extension/: CMakeLists.txt  Extension.cpp  Extension.h  Pong.configext
src/Game/: CGame.cpp  CGame.h  CMakeLists.txt  Game.cpp  Game.h
src/Plugin/: CMakeLists.txt  CPluginPong.cpp  CPluginPong.h  PluginFactoryPong.cpp  PluginFactoryPong.h
